--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
+  <meta name="description" content="Manga Quotes - citations inspirantes de vos personnages préférés de manga." />
+  <meta name="keywords" content="manga, citations, anime, quotes, naruto, one piece, itachi, luffy" />
+  <meta name="google-site-verification" content="-nTj0p4WsZtMKVRsAUcQIy61_Pga9YdDcB9nFIUOYP8" />
+  <meta name="author" content="Hanoune Camara" />
   <meta charset="UTF-8">
   <title>Générateur de Citations</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
